--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
     <build>
         <plugins>
             <plugin>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.11.0</version>
+			</plugin>
+			<plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
             </plugin>
